--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,6 @@ branches:
 git:
   depth: 10
 
-addons:
-  apt:
-    sources:
-      - llvm-toolchain-trusty-5.0
-    packages:
-      - clang-5.0
-
 before_install:
   - git clone https://github.com/creationix/nvm.git ./.nvm
   - source ./.nvm/nvm.sh
@@ -29,12 +22,11 @@ install:
 
 script:
   - npm test
-  - CXX=/usr/bin/clang++-5.0 CC=/usr/bin/clang-5.0 cmake .
+  - cmake .
   - cmake --build .
   - ctest -VV
 
 os:
-- linux
 - osx
 
 dist: trusty
