--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ compiler:
 addons:
   apt:
     sources:
-      - lvm-toolchain-trusty-5.0
+      - llvm-toolchain-trusty-5.0
     packages:
       - clang-5.0
 
