--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ env:
     - export NODE_VERSION="4" CC=clang-5.0 CXX=clang++-5.0 npm_config_clang=1
     - export NODE_VERSION="6" CC=clang-5.0 CXX=clang++-5.0 npm_config_clang=1
     - export NODE_VERSION="7" CC=clang-5.0 CXX=clang++-5.0 npm_config_clang=1
+    - export NODE_VERSION="4" CC=g++-6 CXX=g++-6
+    - export NODE_VERSION="6" CC=g++-6 CXX=g++-6
+    - export NODE_VERSION="7" CC=g++-6 CXX=g++-6
 
 branches:
 #  only:
@@ -13,13 +16,12 @@ git:
 
 compiler:
   - clang
+  - gcc
 
 addons:
   apt:
-    sources:
-      - llvm-toolchain-trusty-5.0
-    packages:
-      - clang-5.0
+    sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-5.0']
+    packages: ['clang-5.0', 'g++-6']
 
 before_install:
   - git clone https://github.com/creationix/nvm.git ./.nvm
