--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
 env:
   matrix:
-    - export NODE_VERSION="4" CC=clang-5.0 CXX=clang++-5.0 npm_config_clang=1
-    - export NODE_VERSION="6" CC=clang-5.0 CXX=clang++-5.0 npm_config_clang=1
-    - export NODE_VERSION="7" CC=clang-5.0 CXX=clang++-5.0 npm_config_clang=1
+    - export NODE_VERSION="4"
+    - export NODE_VERSION="6"
+    - export NODE_VERSION="7"
+
+  include:
+    - compiler: gcc
+      env: COMPILER=g++-6
+
+    - compiler: clang
+      env: COMPILER=clang++-3.9
+
+
 
 branches:
 #  only:
@@ -11,20 +20,21 @@ branches:
 git:
   depth: 10
 
-compiler:
-  - clang
-  - gcc
-
 addons:
   apt:
-    sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-5.0']
-    packages: ['clang-5.0', 'g++-6']
+    sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.9']
+    packages: ['clang-3.9', 'g++-6']
 
 before_install:
+  - if [ "$TRAVIS_OS_NAME" = "linux"  ]; then sudo apt-get -qq update;    fi
   - git clone https://github.com/creationix/nvm.git ./.nvm
   - source ./.nvm/nvm.sh
   - nvm install $NODE_VERSION
   - nvm use $NODE_VERSION
+
+before_script:
+  - if [ "$COMPILER" = "g++-6"        ]; then export CXX="g++-6" CC="gcc-6";              fi
+  - if [ "$COMPILER" = "clang++-3.9"  ]; then export CXX="clang++-3.9" CC="clang-3.9" npm_config_clang=1;    fi
 
 install:
   - npm install
