--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,8 @@ install:
   - npm install
 
 before_script:
-  - if [ "$COMPILER" = "g++-6"        ]; then export CXX="g++-6" CC="gcc-6";                                 fi
-  - if [ "$COMPILER" = "clang++-3.9"  ]; then export CXX="clang++-3.9" CC="clang-3.9" npm_config_clang=1;    fi
+  - if [ "$COMPILER" = "g++-6"        ]; then export CXX="g++-6" CC="gcc-6" && cmake .;                                    fi
+  - if [ "$COMPILER" = "clang++-3.9"  ]; then export CXX="clang++-3.9" CC="clang-3.9" npm_config_clang=1 && && cmake .;    fi
   - cmake .
 
 script:
