--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ env:
 
   include:
     - compiler: gcc
-      env: COMPILER=g++-6
 
     - compiler: clang
-      env: COMPILER=clang++-3.9
 
 os:
   - osx
@@ -40,8 +38,8 @@ install:
 
 before_script:
   - env
-  - if [ "$COMPILER" = "g++-6"        ]; then export CXX="g++-6" CC="gcc-6" && cmake .;                                 fi
-  - if [ "$COMPILER" = "clang++-3.9"  ]; then export CXX="clang++-3.9" CC="clang-3.9" npm_config_clang=1 && cmake .;    fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CXX="g++-6" CC="gcc-6" && cmake .;                                 fi
+  - if [ "$TRAVIS_OS_NAME" = "osx"   ]; then export CXX="clang++-3.9" CC="clang-3.9" npm_config_clang=1 && cmake .;    fi
 
 script:
   - npm test
