--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,10 @@ env:
     - export NODE_VERSION="7"
 
   include:
-    - compiler: gcc
+    - os: linux
 
-    - compiler: clang
-
-os:
-  - osx
-  - linux
-
+    - os: osx
+      osx_image: xcode8
 
 branches:
 #  only:
@@ -23,8 +19,8 @@ git:
 
 addons:
   apt:
-    sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.9']
-    packages: ['clang-3.9', 'g++-6']
+    sources: ['ubuntu-toolchain-r-test']
+    packages: ['g++-6']
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux"  ]; then sudo apt-get -qq update;    fi
