--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,3 @@
-env:
-  global:
-    - export NODE_VERSION="4"
-    - export NODE_VERSION="6"
-    - export NODE_VERSION="7"
-
 matrix:
   include:
     - os: linux
@@ -13,6 +7,13 @@ matrix:
     - os: osx
       compiler: clang
       osx_image: xcode8
+
+    - os: linux
+      env: NODE_VERSION="4"
+      env: NODE_VERSION="6"
+      env: NODE_VERSION="7"
+      env: NODE_VERSION="8"
+  
 
 
 branches:
